# naughty

./: README.md  cpp_mpc
aio/: Makefile  aio_read.c  aioread.c  libaio_write.c
aligned/: Makefile  alignas.c  pragma_pack.c
allign/: Makefile
alloc/: README.md  ping_type.h  placement_new.cpp  placement_new.h  test.cpp  test_replacement_new.cpp
allocator/: Makefile  objpool.h  practise.cpp  raw_alloc.h  rawalloc.h  tallocator.h  test_objpool.cpp  test_rawalloc.cpp  test_tmalloc.cpp  tmalloc.h
asan/: Makefile  main.cpp
atomic/: atomic.h  is_lock_free.cpp
blocking_queue/: Makefile  blocking_queue.h  test_blockqueue.cpp
brk/: a.out  main.c
builtin_expect/: likely.cpp
cache_align/: Makefile  main.cpp
compile/: test_inline_virtual.cpp  test_right_value.cpp
concurrent/: Makefile  atomic.cpp  condition_var.cpp  memory_order.cpp  semaphore.cpp
coroutine/: Makefile  coroutine.h  test.cpp
cpp/: overload.cpp  polymorphism.cpp
cpp_feature/: alias_function.cpp  constexpr.cpp  construct_destruct_order.cpp  explicit.cpp  labmda.cpp  lambda.cpp  overload.cpp  override.cpp  overwrite.cpp  specialized_template.cpp  sso_string.cpp  std_function.cpp  union_string.cpp  variant.cpp  virtual_function.cpp
cpp_mpc/: check_member.cpp  (+1 more)
fio/: CMakeLists.txt  Makefile  analyse_concurrent_result.py  diff_multi_process_write.py  fcontrol.h  fio.cpp  fio.h  fread.cpp  fwrite.cpp  mmap.cpp  mthread_write.cpp  pread.cpp  writev.cpp
fio/parallel/: Makefile  fwrite.cpp
fio/test/: Makefile  test_hole.cpp  test_io.cpp  test_stat.cpp
gtest/: CMakeLists.txt  run.sh  test.cpp
(+388 files in other folders)
